[tool.poetry]
name = "schemasheets"
version = "0.1.4"
description = "Package to author schemas using spreadsheets"
authors = ["cmungall <cjm@berkeleybop.org>"]

readme = "README.md"

homepage = "https://github.com/linkml/schemasheets"
repository = "https://github.com/linkml/schemasheets"
documentation = "https://github.com/linkml/schemasheets"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.1.15"
Jinja2 = "^3.0.3"
ontodev-cogs = "^0.3.3"
bioregistry = "^0.4.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sheets2linkml = "fairstructure.schemamaker:convert"
sheets2project = "fairstructure.sheets_to_project:multigen"
