[tool.poetry]
name = "schemasheets"
version = "0.0.0"
description = "Package to author schemas using spreadsheets"
authors = ["cmungall <cjm@berkeleybop.org>"]

readme = "README.md"

homepage = "https://github.com/linkml/schemasheets"
repository = "https://github.com/linkml/schemasheets"
documentation = "https://github.com/linkml/schemasheets"

[tool.poetry.dependencies]
python = "^3.9"
linkml = ">=1.5.0"
linkml-runtime = ">=1.5.0"
Jinja2 = ">=3.0.3"
ontodev-cogs = "^0.3.3"
bioregistry = ">0.5.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
mkdocs = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sheets2linkml = "schemasheets.schemamaker:convert"
linkml2sheets = "schemasheets.schema_exporter:export_schema"
sheets2project = "schemasheets.sheets_to_project:multigen"

linkml2schemasheets-template = 'schemasheets.generate_populate:cli'
[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,*.lock'
check-hidden = true
ignore-regex = '\bOTU\b'
# ignore-words-list = ''
